--- a/new_year2/index.html
+++ b/new_year2/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 
@@ -140,8 +139,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <section class="main-s">
         <div class="container">
           <div class="main">
-						<img class="main__img" src="https://likecentre.ru/storage/img/new_year2/main-toy.png" alt="alt"/>
-            <div class="main__block">
+						<img class="main__img fade-bottom" src="https://likecentre.ru/storage/img/new_year2/main-toy.png" alt="alt"/>
+            <div class="main__block fade-bottom">
 							<img class="main__title" src="https://likecentre.ru/storage/img/new_year2/main-image.png" alt="Новый год с Аязом Шабутдиновым"/>
               <div class="main-date">
                 <div class="main-date__block">
