--- a/new_year2/index.html
+++ b/new_year2/index.html
@@ -139,8 +139,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <section class="main-s">
         <div class="container">
           <div class="main">
-						<img class="main__img fade-bottom" src="https://likecentre.ru/storage/img/new_year2/main-toy.png" alt="alt"/>
-            <div class="main__block fade-bottom">
+						<img class="main__img" src="https://likecentre.ru/storage/img/new_year2/main-toy.png" alt="alt"/>
+            <div class="main__block">
 							<img class="main__title" src="https://likecentre.ru/storage/img/new_year2/main-image.png" alt="Новый год с Аязом Шабутдиновым"/>
               <div class="main-date">
                 <div class="main-date__block">
@@ -192,7 +192,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <section class="choose-s">
         <div class="container">
           <div class="choose" id="choose">
-            <h2 class="title choose__title"><span class="choose__title_first">С кем встретишь</span>Новый год, с тем его<span class="choose__title_second">и проведешь</span></h2>
+            <h2 class="title choose__title fade-bottom"><span class="choose__title_first">С кем встретишь</span>Новый год, с тем его<span class="choose__title_second">и проведешь</span></h2>
             <div class="choose__image"><img class="choose__img" src="https://likecentre.ru/storage/img/new_year2/choose.jpg" alt="Аяз"/>
               <p class="choose__descr">Веришь или нет, <br> но всего за одну ночь можно круто изменить свою жизнь.</p>
             </div>
