--- a/new_year2/index.html
+++ b/new_year2/index.html
@@ -99,7 +99,7 @@
     <!-- End Facebook Pixel Code -->
     </head>
 
-<body data-host="http://likecentre.ru">
+<body data-host="http://like.gexar.tk">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WBGV6T" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
