--- a/new_year2/index.html
+++ b/new_year2/index.html
@@ -30,7 +30,7 @@
     <meta name="csrf-token" content="Ku8tTGtYQ2Lc9wGtRgMvbbCukhot6Ec5He8Pguzd">
     <meta name="description" content="Новый год">
     <meta name="keywords" content="Новый год, бизнес">
-        	<meta property="og:url" content="http://likecentre.ru/new_year2" />
+        	<meta property="og:url" content="http://like.gexar.tk/new_year2" />
         <meta property="og:title" content="Новый год с Аязом" />
 
     <title>Новый год с Аязом</title>
