--- a/new_year2/index.html
+++ b/new_year2/index.html
@@ -138,7 +138,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </div>
       </header>
-      <section class="main-s">
+      <section class="main-s fade">
         <div class="container">
           <div class="main">
 						<img class="main__img" src="https://likecentre.ru/storage/img/new_year2/main-toy.png" alt="alt"/>
@@ -191,7 +191,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </div>
       </section>
-      <section class="choose-s">
+      <section class="choose-s fade">
         <div class="container">
           <div class="choose" id="choose">
             <h2 class="title choose__title"><span class="choose__title_first">С кем встретишь</span>Новый год, с тем его<span class="choose__title_second">и проведешь</span></h2>
@@ -221,7 +221,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </div>
       </section>
-      <section class="wait-s">
+      <section class="wait-s fade">
         <div class="container">
           <div class="wait" id="wait"><img class="wait__ball image" src="https://likecentre.ru/storage/img/new_year2/disco-ball.jpg" alt="disco ball"/><img class="wait__mask image" src="https://likecentre.ru/storage/img/new_year2/mask.png" alt="mask"/>
             <h2 class="title wait__title"><span class="wait__title_first">Что тебя ждет</span>
