--- a/new_year2/index.html
+++ b/new_year2/index.html
@@ -46,7 +46,6 @@
     <link type="text/css" rel="stylesheet" href="https://likecentre.ru/storage/js/lightslider/lightGallery.css">
     <link type="text/css" rel="stylesheet" href="https://likecentre.ru/storage/js/swiper/swiper.css">
 
-
     <style>.social{min-width: 146px;}.ui-menu{background: #444;color: #fff}.ui-state-active{background: #666 !important;}</style>
 
     
@@ -71,6 +70,7 @@
     <link rel="apple-touch-icon" href="https://likecentre.ru/storage/img/apple-touch-icon.png">
 
     <!-- Facebook Pixel Code -->
+    <!-- 
     <script>
         ! function (f, b, e, v, n, t, s) {
             if (f.fbq) return;
@@ -98,6 +98,7 @@
         <img height="1" width="1" src="https://www.facebook.com/tr?id=276936586119511&ev=PageView
 		&noscript=1" />
     </noscript>
+    -->
     <!-- End Facebook Pixel Code -->
     </head>
 
@@ -138,7 +139,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </div>
       </header>
-      <section class="main-s fade">
+      <section class="main-s revealator-zoomin">
         <div class="container">
           <div class="main">
 						<img class="main__img" src="https://likecentre.ru/storage/img/new_year2/main-toy.png" alt="alt"/>
@@ -191,7 +192,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </div>
       </section>
-      <section class="choose-s fade">
+      <section class="choose-s revealator-zoomin">
         <div class="container">
           <div class="choose" id="choose">
             <h2 class="title choose__title"><span class="choose__title_first">С кем встретишь</span>Новый год, с тем его<span class="choose__title_second">и проведешь</span></h2>
@@ -221,7 +222,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </div>
       </section>
-      <section class="wait-s fade">
+      <section class="wait-s revealator-zoomin">
         <div class="container">
           <div class="wait" id="wait"><img class="wait__ball image" src="https://likecentre.ru/storage/img/new_year2/disco-ball.jpg" alt="disco ball"/><img class="wait__mask image" src="https://likecentre.ru/storage/img/new_year2/mask.png" alt="mask"/>
             <h2 class="title wait__title"><span class="wait__title_first">Что тебя ждет</span>
@@ -498,6 +499,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script src="https://likecentre.ru/storage/js/swiper/swiper.min.js"></script>
     <script src="https://likecentre.ru/storage/js/lightslider/lightGallery.js"></script>
 		
+    <!-- Animation -->
+    <link rel="stylesheet" href="fm.revealator.jquery.css">
+    <!-- <script src="jquery-1.11.3.min.js"></script> -->
+    <script src="fm.revealator.jquery.min.js"></script>
+
 	<script type="text/javascript" src="https://likecentre.ru/storage/js/new_year2/localStorage.js"></script>
 	<script type="text/javascript" src="https://e-timer.ru/js/etimer.js"></script>
 
